; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/uzlib/host/extr_uz_unzip.c_recall_byte.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/uzlib/host/extr_uz_unzip.c_recall_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.TYPE_3__** }
%struct.TYPE_3__ = type { i32* }

@DICTIONARY_WINDOW = common dso_local global i64 0, align 8
@out = common dso_local global %struct.TYPE_4__* null, align 8
@UZLIB_DICT_ERROR = common dso_local global i32 0, align 4
@WRITE_BLOCKSIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @recall_byte(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @DICTIONARY_WINDOW, align 8
  %8 = icmp sgt i64 %6, %7
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load i64, i64* %2, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp sge i64 %10, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %9, %1
  %16 = load i32, i32* @UZLIB_DICT_ERROR, align 4
  %17 = call i32 @UZLIB_THROW(i32 %16)
  br label %18

18:                                               ; preds = %15, %9
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* %2, align 8
  %23 = sub nsw i64 %21, %22
  store i64 %23, i64* %3, align 8
  %24 = load i64, i64* %3, align 8
  %25 = load i64, i64* @WRITE_BLOCKSIZE, align 8
  %26 = srem i64 %24, %25
  store i64 %26, i64* %4, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @WRITE_BLOCKSIZE, align 8
  %31 = sdiv i64 %29, %30
  %32 = load i64, i64* %3, align 8
  %33 = load i64, i64* @WRITE_BLOCKSIZE, align 8
  %34 = sdiv i64 %32, %33
  %35 = sub nsw i64 %31, %34
  store i64 %35, i64* %5, align 8
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 1
  %38 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %37, align 8
  %39 = load i64, i64* %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %38, i64 %39
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32*, i32** %42, align 8
  %44 = load i64, i64* %4, align 8
  %45 = getelementptr inbounds i32, i32* %43, i64 %44
  %46 = load i32, i32* %45, align 4
  ret i32 %46
}

declare dso_local i32 @UZLIB_THROW(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
